--- a/eternity/index.html
+++ b/eternity/index.html
@@ -31,5 +31,59 @@
             //base.insertAdjacentHTML("afterend", template.content.firstElementChild.innerHTML);
         </script>
     </head>
-    <body oncontextmenu="return false" theme="auto"></body>
+    <body theme="auto">
+        <main>
+            <section>
+                <section class="component component-home active" route="/">
+                    <article class="article-ring">
+                        <section>
+                            <div class="ring-spectrum">
+                                <section>
+                                    <div id="coin">
+                                        <div class="side-a"></div>
+                                        <div class="side-b"></div>
+                                    </div>
+                                    <box class="background-color-red ring ring-red" id="spectrum-code">
+                                        <section>
+                                            <picture></picture>
+                                        </section>
+                                    </box>
+                                    <box class="background-color-orange ring ring-orange" id="spectrum-games">
+                                        <section>
+                                            <picture></picture>
+                                        </section>
+                                    </box>
+                                    <box class="background-color-yellow ring ring-yellow" id="spectrum-photo">
+                                        <section>
+                                            <picture></picture>
+                                        </section>
+                                    </box>
+                                    <box class="background-color-green ring ring-green" id="spectrum-blog">
+                                        <section>
+                                            <picture></picture>
+                                        </section>
+                                    </box>
+                                    <box class="background-color-blue ring ring-blue" id="spectrum-audio">
+                                        <section>
+                                            <picture></picture>
+                                        </section>
+                                    </box>
+                                    <box class="background-color-indigo ring ring-indigo" id="spectrum-video">
+                                        <section>
+                                            <picture></picture>
+                                        </section>
+                                    </box>
+                                    <box class="background-color-violet ring ring-violet" id="spectrum-space">
+                                        <section>
+                                            <picture></picture>
+                                        </section>
+                                    </box>
+                                </section>
+                            </div>
+                        </section>
+                    </article>
+                </section>
+            </section>
+        </main>
+    </body>
 </html>
